--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -10,7 +10,7 @@ header.nav-bar {
     justify-content: space-around;
     height: 100%;
     box-shadow: var(--box-shadow-light);
-    background-color: #fff;
+    background-color: var(--primary-color);
     border-radius: 8px;
     overflow: hidden;
     font-size: 18px;
