--- a/src/components/Modals/SelectFileModal/index.less
+++ b/src/components/Modals/SelectFileModal/index.less
@@ -5,7 +5,7 @@
     padding-right: 0;
     text-align: center;
     pointer-events: none;
-    background-color: #fff;
+    background-color: var(--primary-color);
 }
 .ant-input-group-compact {
     display: flex;
