--- a/src/views/Home/components/HomeContent/index.less
+++ b/src/views/Home/components/HomeContent/index.less
@@ -147,7 +147,7 @@
             padding: 20px;
             margin: 0 16px 8px;
             box-shadow: 0 0 30px #523f690d;
-            background-color: #fff;
+            background-color: var(--primary-color);
             color: #2c3f5d;
 
             .new-user-base {
