--- a/src/views/Module/components/ModuleHeader/index.less
+++ b/src/views/Module/components/ModuleHeader/index.less
@@ -4,6 +4,6 @@
     .header-menu-btn {
         box-sizing: border-box;
         padding: 8px;
-        background-color: #fff;
+        background-color: var(--primary-color);
     }
 }
