--- a/src/views/Module/components/ModuleMain/index.less
+++ b/src/views/Module/components/ModuleMain/index.less
@@ -1,5 +1,5 @@
 .module-main {
-  background: #fafafa;
+  // background: var(--primary-color);
 
   :deep(.ant-tabs-nav) {
     margin-bottom: 0;
@@ -12,7 +12,7 @@
   :deep(.ant-tabs-content) {
     box-sizing: border-box;
     padding: 16px;
-    background-color: #fff;
+    background-color: var(--primary-color);
   }
 
   // 内容区域
