--- a/src/views/Routine/Config/index.less
+++ b/src/views/Routine/Config/index.less
@@ -29,7 +29,7 @@
 
         .card-main {
             padding: 16px;
-            background-color: #fff;
+            background-color: var(--primary-color);
 
             .ant-btn-sm {
                 font-size: 12px;
