--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -9,7 +9,7 @@ header.nav-bar .nav-menus {
   justify-content: space-around;
   height: 100%;
   box-shadow: var(--box-shadow-light);
-  background-color: #fff;
+  background-color: var(--primary-color);
   border-radius: 8px;
   overflow: hidden;
   font-size: 18px;
@@ -105,6 +105,6 @@ header.nav-bar .nav-menus .nav-menu-item:hover .anticon {
     overflow: inherit;
   }
   .nav-bar {
-    background-color: #fff;
+    background-color: var(--primary-color);
   }
 }
