--- a/src/views/Auth/AdminLog/index.less
+++ b/src/views/Auth/AdminLog/index.less
@@ -1,5 +1,5 @@
 .default-main {
     box-sizing: border-box;
     padding: 16px;
-    background-color: #fff;
+    background-color: var(--primary-color);
 }
