--- a/src/views/Auth/Menu/index.less
+++ b/src/views/Auth/Menu/index.less
@@ -1,7 +1,7 @@
 .default-main {
     box-sizing: border-box;
     padding: 16px;
-    background-color: #fff;
+    background-color: var(--primary-color);
 
     .container-table {
         // overflow-y: hidden;
@@ -11,7 +11,7 @@
         .table-form,
         .table-header,
         .ant-table-wrapper {
-            background-color: #fff;
+            background-color: var(--primary-color);
         }
 
         .table-form {
