--- a/src/views/Routine/Info/components/Edit/index.less
+++ b/src/views/Routine/Info/components/Edit/index.less
@@ -1,7 +1,7 @@
 .edit-info {
   box-sizing: border-box;
   padding: 24px;
-  background-color: #fff;
+  background-color: var(--primary-color);
   border-top: 5px solid var(--primary-color);
   border-radius: 5px;
 
