--- a/src/common/less/theme.less
+++ b/src/common/less/theme.less
@@ -23,6 +23,7 @@
   --primary-bg-color-hover: var(--primary-bg-color-table);
   --primary-text-color: rgba(0, 0, 0);
   --primary-text-color-sub: rgba(0, 0, 0, 0.85);
+  --primary-text-color-disabled: rgba(0, 0, 0, 0.25);
   --primary-border-color: #f0f0f0;
   --box-shadow-light: 0px 0px 12px rgba(0, 0, 0, 0.12);
 }
@@ -35,6 +36,7 @@
   --primary-bg-color-hover: var(--primary-bg-color);
   --primary-text-color: rgba(255, 255, 255);
   --primary-text-color-sub: rgba(255, 255, 255, 0.85);
+  --primary-text-color-disabled: rgba(255, 255, 255, 0.25);
   --primary-border-color: var(--primary-bg-color);
   --box-shadow-light: 0px 0px 12px rgba(255, 255, 255, 0.12);
 }
