--- a/src/views/Login/index.less
+++ b/src/views/Login/index.less
@@ -72,6 +72,15 @@
         width: 100%;
         border-radius: 25px !important;
       }
+
+      .svg_captcha {
+        // position: absolute;
+        // right: 0;
+        // top: 0;
+        width: 100px;
+        height: 40px;
+        cursor: pointer;
+      }
     }
   }
 }
