--- a/src/views/Login/index.less
+++ b/src/views/Login/index.less
@@ -61,7 +61,7 @@
     }
 
     .content {
-      padding: 100px 40px 40px 40px;
+      padding: 80px 40px 30px 40px;
 
       .ant-input-affix-wrapper,
       .submit {
@@ -74,11 +74,13 @@
       }
 
       .svg_captcha {
+        margin-left: 8px;
         // position: absolute;
         // right: 0;
         // top: 0;
         width: 100px;
-        height: 40px;
+        // height: 40px;
+        line-height: 1em;
         cursor: pointer;
       }
     }
