--- a/src/views/Login/index.less
+++ b/src/views/Login/index.less
@@ -7,7 +7,7 @@
 
 .bubble {
   overflow: hidden;
-  background: url(@/assets/images/bg.jpg) repeat;
+  background: url("../../assets/images/bg.jpg") repeat;
 }
 
 .form-item-icon {
@@ -111,36 +111,6 @@
 
 .captcha-img {
   width: 100%;
-}
-
-// 暗黑样式
-@at-root .dark {
-  .bubble {
-    background: url(@/assets/images/bg-dark.jpg) repeat;
-  }
-
-  .login {
-    .login-box {
-      background: #161b22;
-    }
-
-    .head {
-      img {
-        filter: brightness(61%);
-      }
-    }
-
-    .form {
-      .submit-button {
-        --el-button-bg-color: var(--el-color-primary-light-5);
-        --el-button-border-color: rgba(240, 252, 241, 0.1);
-      }
-    }
-  }
-
-  .captcha-img {
-    filter: brightness(61%);
-  }
 }
 
 @media screen and (max-height: 800px) {
