--- a/src/components/IComponents/ITable/index.less
+++ b/src/components/IComponents/ITable/index.less
@@ -17,10 +17,12 @@
       align-items: center;
       box-sizing: border-box;
       overflow-x: auto;
+
       :deep(.anticon-spin) {
         width: 1em;
         height: 1em;
       }
+
       .table-header_search {
         background-color: var(--primary-color);
       }
@@ -51,7 +53,7 @@
           margin-bottom: 16px;
         }
 
-        .i-form-operate {
+        .i-form-operation {
           margin-left: 16px;
           align-self: flex-end;
         }
