--- a/src/views/Home/components/HomeContent/index.less
+++ b/src/views/Home/components/HomeContent/index.less
@@ -163,7 +163,7 @@
 
             .new-user-line {
                 margin-left: auto;
-                color: @primary-color;
+                color: @ant-primary-color;
             }
         }
     }
