--- a/src/components/Header/components/TagsPc/index.less
+++ b/src/components/Header/components/TagsPc/index.less
@@ -35,7 +35,7 @@
         transition: all var(--transition-duration_dot3);
 
         &:hover {
-          background-color: @primary-color;
+          background-color: @ant-primary-color;
           border-radius: 50px;
           color: #fff;
         }
@@ -88,7 +88,7 @@
         }
         &.active {
           color: #fff;
-          background-color: @primary-color;
+          background-color: @ant-primary-color;
         }
         &.activeClose {
           padding-right: 12px;
