--- a/src/components/Layout/index.less
+++ b/src/components/Layout/index.less
@@ -1,8 +1,6 @@
 
 .container {
   box-sizing: border-box;
-  padding: 16px 0;
-  padding-bottom: 0;
   width: 100%;
   height: 100%;
   min-height: 100%;
@@ -24,14 +22,13 @@
       right: 0;
       z-index: 10;
       box-sizing: border-box;
-      padding: 16px !important;
+      padding: 1rem !important;
       background-color: var(--bgColor);
     }
 
     .layout-view {
       box-sizing: border-box;
-      padding: 16px;
-      // height: 100%;
+      padding: 1rem;
       overflow-y: auto;
       background-color: transparent;
     }
@@ -67,8 +64,8 @@
   transform: translateX(20px);
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1280px) {
   .container {
-    padding: 0;
+    padding-top: 0;
   }
 }
