--- a/src/common/less/theme.less
+++ b/src/common/less/theme.less
@@ -27,6 +27,8 @@
   --primary-text-color-selected: @ant-primary-color;
   --primary-border-color: #f0f0f0;
   --box-shadow-light: 0px 0px 12px rgba(0, 0, 0, 0.12);
+  --scrollbar-thumb-bg-color: rgba(0, 0, 0, 0.05);
+  --scrollbar-thumb-bg-color-hover: rgba(0, 0, 0, 0.2);
 }
 
 [data-theme="dark"] {
@@ -42,6 +44,8 @@
   --primary-text-color-selected: rgba(255, 255, 255);
   --primary-border-color: var(--primary-bg-color);
   --box-shadow-light: 0px 0px 12px rgba(255, 255, 255, 0.12);
+  --scrollbar-thumb-bg-color: rgba(255, 255, 255, 0.35);
+  --scrollbar-thumb-bg-color-hover: rgba(255, 255, 255, 0.50);
 }
 
 [data-animation="none"] {
