--- a/src/components/Layout/index.less
+++ b/src/components/Layout/index.less
@@ -1,5 +1,4 @@
-
-.container {
+.pirate-container {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
@@ -62,10 +61,4 @@
 .slide-right-leave-to {
   opacity: 0;
   transform: translateX(20px);
-}
-
-@media screen and (max-width: 1280px) {
-  .container {
-    padding-top: 0;
-  }
 }
