--- a/src/common/css/style.css
+++ b/src/common/css/style.css
@@ -58,12 +58,12 @@ body,
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background: rgba(0, 0, 0, 0.05);
+  background: var(--scrollbar-thumb-bg-color);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(0, 0, 0, 0.2);
+  background: var(--scrollbar-thumb-bg-color-hover);
 }
 
 /* ::-webkit-scrollbar-thumb:window-inactive {
