--- a/src/views/Home/components/HomeContent/index.less
+++ b/src/views/Home/components/HomeContent/index.less
@@ -88,11 +88,11 @@
         .small-panel-content {
             display: flex;
             justify-content: space-between;
-            align-items: end;
+            align-items: flex-end;
             color: #2c3f5d;
 
             .content-left {
-                align-items: end;
+                align-items: flex-end;
 
                 .content-icon {
                     font-size: 1.5rem;
