--- a/src/components/IComponents/IUpload/index.less
+++ b/src/components/IComponents/IUpload/index.less
@@ -1,54 +1,45 @@
 .i-upload {
-  position: relative;
-  display: inline-block;
-  border: 1px dashed #d9d9d9;
-  border-radius: 5px;
-  overflow: hidden;
-  transition: all .1s;
 
-  .i-upload-select {
-    box-sizing: border-box;
-    padding: 3px 0;
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    font-size: 12px;
-    border: 1px dashed #d9d9d9;
-    border-radius: 0 0 15px 15px;
-    transition: all .1s;
-    user-select: none;
-    color: #606266;
-
-    &:hover {
-      cursor: pointer;
-      color: @ant-primary-color;
-      border-color: @ant-primary-color;
-    }
+  :deep(.ant-upload-list-picture-card-container) {
+    width: 120px;
+    height: 120px;
   }
 
   :deep(.ant-upload) {
-    width: 130px;
-    height: 130px;
-    border: 0;
-    margin: 0;
+    &.ant-upload-select-picture-card {
+      position: relative;
+      width: 120px;
+      height: 120px;
+      border-radius: 4px;
 
-    .upload-placeholder {
+      .select-text {
+        position: absolute;
+        width: 100%;
+        top: 0;
+        left: 0;
+        height: 26px;
+        line-height: 26px;
+        border: 1px dashed #d9d9d9;
+        border-top: none;
+        border-radius: 0 0 20px 20px;
+        font-size: 12px;
+        transition: all 0.3s;
+        color: #606266;
 
-      .upload-icon {
-        font-size: 20px
+        &:hover {
+          cursor: pointer;
+          color: @ant-primary-color;
+          border-color: @ant-primary-color;
+        }
+      }
+
+      &:hover {
+        .i-upload-icon,
+        .i-upload-text {
+          opacity: 1;
+          color: @ant-primary-color;
+        }
       }
     }
-  }
-
-  &:hover {
-    .upload-placeholder {
-      color: @ant-primary-color;
-
-      .upload-icon {
-        font-size: 20px
-      }
-    }
-
-    border-color: @ant-primary-color;
   }
 }
