优化部分 对接菜单接口

--- a/src/common/less/theme.less
+++ b/src/common/less/theme.less
@@ -26,6 +26,7 @@
   --primary-text-color-disabled: rgba(0, 0, 0, 0.25);
   --primary-text-color-selected: @ant-primary-color;
   --primary-border-color: #f0f0f0;
+  --primary-border-color-selected: @ant-primary-color;
   --box-shadow-light: 0px 0px 12px rgba(0, 0, 0, 0.12);
   --scrollbar-thumb-bg-color: rgba(0, 0, 0, 0.05);
   --scrollbar-thumb-bg-color-hover: rgba(0, 0, 0, 0.2);
@@ -43,6 +44,7 @@
   --primary-text-color-disabled: rgba(255, 255, 255, 0.25);
   --primary-text-color-selected: rgba(255, 255, 255);
   --primary-border-color: var(--primary-bg-color);
+  --primary-border-color-selected: rgba(255, 255, 255);
   --box-shadow-light: 0px 0px 12px rgba(255, 255, 255, 0.12);
   --scrollbar-thumb-bg-color: rgba(255, 255, 255, 0.35);
   --scrollbar-thumb-bg-color-hover: rgba(255, 255, 255, 0.50);
