--- a/src/views/Common/Error/404/index.less
+++ b/src/views/Common/Error/404/index.less
@@ -33,15 +33,15 @@
                 width: 80px;
             }
 
-            .stopcode {
+            .stopCode {
                 padding-left: 10px;
 
-                .stopcode-text {
+                .stopCode-text {
                     display: block;
                     padding: 4px 0;
                     font-size: 16px;
 
-                    .stopcode-a {
+                    .stopCode-a {
                         text-decoration: underline;
                     }
                 }
@@ -51,7 +51,7 @@
     }
 }
 
-.stopcode-a {
+.stopCode-a {
     font-size: 16px;
     color: var(--ba-bg-color-overlay);
     padding-right: 16px;
@@ -72,7 +72,7 @@
         padding: 30px 0;
     }
 
-    .stopcode-text {
+    .stopCode-text {
         font-size: 15px !important;
     }
 }
