--- a/src/components/IComponents/IIcon/index.less
+++ b/src/components/IComponents/IIcon/index.less
@@ -10,7 +10,7 @@
 
       &.active,
       &:hover {
-        color: var(--primary-color);
+        color: var(--primary-border-color-selected);
       }
     }
   }
@@ -31,11 +31,16 @@
     border-radius: 5px;
     cursor: pointer;
     border: 1px solid #eee;
-    transition: all 0.3s;
+    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 
     &:hover {
       box-sizing: border-box;
-      border: 1px solid var(--primary-color);
+      border: 1px solid var(--primary-border-color-selected);
+    }
+
+    &.active {
+      box-sizing: border-box;
+      border: 1px solid var(--primary-border-color-selected);
     }
   }
 }
