--- a/src/components/Layout/index.less
+++ b/src/components/Layout/index.less
@@ -28,7 +28,7 @@
     .layout-view {
       box-sizing: border-box;
       padding: 1rem;
-      overflow-y: auto;
+      //overflow-y: auto;
       background-color: transparent;
     }
   }
