新增 01 对接个人信息 优化 01 formSearch -> queryForm 更具有语义化

--- a/src/views/Login/index.less
+++ b/src/views/Login/index.less
@@ -73,13 +73,9 @@
         border-radius: 25px !important;
       }
 
-      .svg_captcha {
+      .svg-captcha {
         margin-left: 8px;
-        // position: absolute;
-        // right: 0;
-        // top: 0;
         width: 100px;
-        // height: 40px;
         line-height: 1em;
         cursor: pointer;
       }
