feat: 新增CustomInput插件 将表单输入拆分出来 fix: 修复IIcon组件在卸载时的缓存问题 chore: 将新增展开/收起的的国际化语言

--- a/src/components/IComponents/ITable/index.less
+++ b/src/components/IComponents/ITable/index.less
@@ -9,7 +9,7 @@
     }
 
     .i-table-form {
-      transform-style: preserve-3d; // 3d 旋转
+      @apply style-preserve-3d;
     }
 
     .table-header {
@@ -19,6 +19,10 @@
 
     .ant-table-wrapper {
       @apply pt-0;
+    }
+
+    .ant-table-cell {
+      @apply whitespace-pre;
     }
   }
 }
