--- a/src/common/css/style.css
+++ b/src/common/css/style.css
@@ -36,7 +36,7 @@ body,
   background-color: var(--bgColor) !important;
   font-size: 14px;
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
-    Microsoft YaHei, SimSun, sans-serif;
+  Microsoft YaHei, SimSun, sans-serif;
   /* background-color: var(--primary-bg-color); */
 }
 
@@ -145,6 +145,7 @@ a {
 .d-none {
   display: none;
 }
+
 .d-flex {
   display: flex;
 }
@@ -171,9 +172,11 @@ a {
 .mtb_4 {
   margin: 4px 0;
 }
+
 .mlr_4 {
   margin: 0 4px;
 }
+
 .mr_5 {
   margin-right: 5px;
 }
@@ -205,9 +208,11 @@ a {
 .mb_16 {
   margin-bottom: 16px;
 }
+
 .mt_8 {
   margin-top: 8px;
 }
+
 /* 常用内边距 */
 
 .pb_8 {
@@ -243,13 +248,16 @@ a {
 .txt_color_sub {
   color: rgba(0, 0, 0, 0.45);
 }
+
 /* 常用文本对齐方式 */
 .t-align-c {
   text-align: center;
 }
+
 .t-align-l {
   text-align: left;
 }
+
 .t-align-r {
   text-align: right;
 }
@@ -290,6 +298,7 @@ a {
 .fontSize-icon {
   font-size: var(--fontSize-default);
 }
+
 /* block-help */
 .block-help {
   display: block;
@@ -320,8 +329,8 @@ a {
 
 /* 阴影 */
 .is-always-shadow {
-  box-shadow: 0px 12px 32px 4px rgba(0, 0, 0, 0.04),
-    0px 8px 20px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 12px 32px 4px rgba(0, 0, 0, 0.04),
+  0 8px 20px rgba(0, 0, 0, 0.08);
 }
 
 /* 表格 */
@@ -335,6 +344,7 @@ button.drop-row-btn {
 .avatar-turn {
   cursor: pointer;
 }
+
 .avatar-turn:hover {
   transform: rotate(666turn);
   transition: all 59s cubic-bezier(0.34, 0, 0.84, 1) 1s;
@@ -342,11 +352,14 @@ button.drop-row-btn {
 
 /* 文本溢出省略号 */
 .ellipsis {
+  display: inline-block;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .ellipsis_more {
+  display: inline-block;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -358,7 +371,7 @@ button.drop-row-btn {
   overflow: hidden;
   height: 0;
   padding-bottom: var(
-    --img-placeholder-rate
+          --img-placeholder-rate
   ); /** 其中*处填 图片的高宽百分比=高/宽*100% */
 }
 
